--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "frontend",
+  "name": "ecomm-react-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,7 +12,7 @@
   "dependencies": {
     "@paypal/react-paypal-js": "^8.1.3",
     "@reduxjs/toolkit": "^1.9.6",
-    "axios": "^1.5.0",
+    "axios": ">=1.8.2",
     "bootstrap": "^5.3.2",
     "ecommercepoc": "file:..",
     "react": "^18.2.0",
@@ -33,6 +33,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
+    "vite": ">=4.5.11"
   }
 }
